fix(consonant-blocks): QA Result: Mobile versions- texts and CTA buttons all to be left aligned

--- a/templates/consonant/blocks/columns/columns.css
+++ b/templates/consonant/blocks/columns/columns.css
@@ -179,12 +179,6 @@ main .columns .column-picture img {
   main .columns.large .columns-row .column {
     padding: 0;
     max-width: 500px;
-    text-align: center;
-  }
-  
-
-  main .columns.large .columns-row .column p.button-container {
-    justify-content: center;
   }
 
   main .columns.small .columns-row .column {
